<resources>
    <string name="app_name">AppMobileManagementTimes</string>
    <string-array name="weekday_names">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_pomo">Pomo</string>
    <string name="title_statistic">Statistic</string>

    <string name="hint_task_title">Task Title</string>
    <string name="hint_task_time">Task Time (HH:mm - HH:mm)</string>
    <string name="custom_time">Custom time</string>
    <string name="to_do_minutes">To do (minutes):</string>
    <string name="short_break_minutes">Short break (minutes):</string>
    <string name="select_music">Select Focus Music</string>
    <string name="music_on">Turn Music On</string>
    <string name="music_off">Turn Music Off</string>
    <string name="volume">Volume</string>

    <string name="task_name">Task Name</string>
    <string name="task_time">20:15 - 22:15</string>
    <string name="select_language">Select language</string>
    <string name="pass_date">Pass date</string>
    <string name="overdue">Overdue</string>
    <string name="done">Done</string>
    <string name="header_text">YOU ARE ON POMODORO</string>
    <string name="dropdown_text">50/10</string>
    <string name="music_text">Music helping focus</string>
    <string name="fullscreen_text">Full screen mode</string>
    <string name="timer_default">50:00</string>
    <string name="stop_button_desc">Stop Button</string>
    <string name="pause_button_desc">Pause Button</string>
    <string name="dropdown_icon_desc">Dropdown icon</string>
    <string name="task_name_placeholder">Task name</string>
    <string name="task_date_placeholder">Date: 27/04/2023</string>
    <string name="task_time_placeholder">Time: 08:00 - 10:00</string>
    <string name="today">Today</string>
    <string name="date_example">09 Feb 2025</string>
    <string name="tasks_done">3/4 tasks done</string>
    <string name="promo_done">3/4 Promo done</string>
    <string name="statistic">Static</string>
    <string name="task_title">Breathtaking</string>
    <string name="edit_task">Edit task</string>
    <string name="delete_task">Delete task</string>
    <string name="title_today">Today</string>
    <string name="title_future">Future day</string>
    <string name="label_todo">To Do</string>
    <string name="label_done">Done</string>
    <string name="avatar">Avatar</string>
    <string name="notification">Notification</string>
    <string name="previous_day">Previous Day</string>
    <string name="next_day">Next Day</string>
    <string name="create_item">Create New Item</string>
    <string name="update_item">Update Item</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="all_day">All Day</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="no_reminder">No Reminder</string>
    <string name="never">Never</string>
    <string name="custom">Custom</string>
    <string name="left_button">Back</string>
    <string name="right_button">Confirm</string>
    <string name="repeat_every_day">Every day</string>
    <string name="repeat_every_week">Every week</string>
    <string name="repeat_every_2_weeks">Every 2 weeks</string>
    <string name="repeat_every_3_weeks">Every 3 weeks</string>
    <string name="repeat_every_month">Every month</string>
    <string name="repeat_every_year">Every year</string>
    <string name="repeat_never">Never</string>

    <!-- Chuỗi cho reminder -->
    <string name="reminder_1m">1 minute before</string>
    <string name="reminder_5m">5 minutes before</string>
    <string name="reminder_15m">15 minutes before</string>
    <string name="reminder_30m">30 minutes before</string>
    <string name="reminder_1h">1 hour before</string>
    <string name="reminder_1d">1 day before</string>
    <string name="reminder_none">No reminder</string>
    <string name="label_1">Label 1</string>
    <string name="label_2">Label 2</string>
    <string name="label_3">Label 3</string>
    <string name="label_4">Label 4</string>
    <string name="label_5">Label 5</string>
    <string name="label_6">Label 6</string>
    <string name="please_login">Please login</string>

    <string name="select_repeat_frequency">Select repeat frequency</string>
    <string name="select_reminder_time">Select reminder time</string>

    <string-array name="pomodoro_modes">
        <item>25/5</item>
        <item>50/10</item>
        <item>90/15</item>
    </string-array>

    <string name="default_web_client_id" translatable="false">920400821174-dkje80h6u35knvd042jnu26thn4uh5j6.apps.googleusercontent.com</string>

    <string name="custom_pomodoro_time">Custom Pomodoro Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="error_times_must_be_positive">Work and break times must be greater than 0</string>
    <string name="error_times_too_large">Please enter reasonable times (Work &lt;= 180, Break &lt;= 60)</string>
    <string name="error_invalid_numbers">Please enter valid numbers</string>
    <string name="error_saving_custom_time">Error saving custom time</string>
    <string name="ui_error_missing_components">UI error: Missing components</string>
    <string name="failed_to_sign_in_anonymously">Failed to sign in anonymously</string>
    <string name="notification_permission_denied">Notification permission denied. Some features may not work.</string>
    <string name="invalid_format_minutes">Invalid format. Use minutes/minutes (e.g., 50/10)</string>
    <string name="invalid_number_format">Invalid number format</string>
    <string name="error_setting_cycle">Error setting cycle</string>
    <string name="pomodoro_timer_title">POMODORO TIMER</string>
    <string name="default_pomodoro_mode">50/10</string>
    <string name="music_helping_focus">Music helping focus</string>
    <string name="full_screen_mode">Full screen mode</string>
    <string name="default_timer_text">50:00</string>
    <string name="default_minutes">50</string>
    <string name="default_seconds">00</string>
    <string name="music_icon_description">Music settings</string>
    <string name="fullscreen_icon_description">Enter fullscreen mode</string>
    <string name="pomodoro_time_format">%d/%d</string>

    <!-- Strings for Upcoming page -->
    <string name="search_hint">Search items</string>
    <string name="search_results">Search Results</string>
    <string name="search_date_format">Date: %s</string>
    <string name="search_time_format" formatted="false">Time: %s - %s</string>
    <string name="single_time_format">Time: %s</string>
    <string name="unknown_date">Date: unknown</string>
    <string name="unknown_time">Time: unknown</string>
    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wed">Wed</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="day_sun">Sun</string>
</resources>