<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Today">

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:background="?android:attr/colorBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageButton
                android:id="@+id/btn_notification"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_notification"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Notification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:tint="?attr/colorSecondary"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/btn_prev_day"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/left"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Previous Day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="-10dp"
                android:tint="?attr/colorSecondary"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/btn_prev_day"
                app:layout_constraintEnd_toStartOf="@id/btn_next_day"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_today"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorSecondary"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_next_day"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/right"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Next Day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="-10dp"
                android:tint="?attr/colorSecondary"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_todo_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_todo"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="?android:attr/textColorPrimary"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_done"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:textColor="?android:attr/textColorPrimary"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height ="wrap_content" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="?attr/colorSecondary"
            android:src="@drawable/ic_add"
            app:tint="?attr/colorOnSecondary" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemIconTint="@drawable/bottom_nav_color"
            app:itemTextColor="@drawable/bottom_nav_color"
            app:menu="@menu/bottom_nav_menu"
            android:background="?attr/colorSurface"/>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"
        app:itemTextColor="@drawable/nav_item_color"
        app:itemIconTint="@drawable/nav_item_color"
        android:background="?attr/colorSurface"/>

</androidx.drawerlayout.widget.DrawerLayout>