<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/btn_prev_day"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/left"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Previous Day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="-10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/btn_prev_day"
                app:layout_constraintEnd_toStartOf="@id/btn_next_day"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/tv_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_today"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#FFEA916E"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"/>
            </LinearLayout>

            <ImageButton
                android:id="@+id/btn_next_day"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/right"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Next Day"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="-10dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:orientation="horizontal"
            android:background="@drawable/rounder_background"
            android:layout_marginBottom="15dp"
            android:padding="15dp"
            >

            <LinearLayout
                android:layout_width="158dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tasks_done"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar1"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_shape"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:padding="15dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/promo_done"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="155dp"
                    android:layout_height="155dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_shape"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:padding="15dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounder_background"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/statistic"
                android:textStyle="bold"
                android:textSize="20dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/linechart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextColor="@color/bottom_nav_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <!--    <include-->
    <!--        layout="m"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_weight="1"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>
